# flow

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: redact.yaml  verify.yaml
schemas/: manifest_v1.json  verify_v1.json
src/: capture.rs  cli.rs  crypto.rs  main.rs  normalize.rs  pack.rs  replay.rs  util.rs  verify.rs
tests/: determinism.rs  e2e.rs
